[package]
name = "ilagent"
version = "0.7.1"
authors = ["Chris Froehlingsdorf <chris@ilert.com>"]
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.50", features = ["full", "rt-multi-thread"] }
actix-web = "4.13"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4"
clap = "4.5"
ilert = "5.1.0"
uuid = { version = "1.22", features = ["v4"] }
ctrlc = { version = "3.5" }
rusqlite = { version = "0.38", features = ["bundled"] } # SQLite 3.46.0
rumqttc = "0.25"
rdkafka = { version = "0.39", features = ["cmake-build"] }

[dev-dependencies]
actix-rt = "2"
tempfile = "3"
wiremock = "0.6"
testcontainers = "0.23"
